[package]
name = "gh-actions-secrets"
version = "0.1.0"
authors = ["Aslam Ahammed <aslamplr@gmail.com>"]
edition = "2018"

[dependencies]
clap = "2.33.0"
hyper = "0.13"
hyper-tls = "0.4.1"
tokio = { version = "0.2", features = ["full"] }
bytes = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
crypto_box = "0.1.0"
rand = "0.7"
base64 = "0.12.0"
