[package]
name = "gh-cli"
version = "0.3.0"
authors = ["Aslam Ahammed <aslamplr@gmail.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"
repository = "https://github.com/aslamplr/gh-cli"

[dependencies]
clap = "3.0.0-beta.1"
hyper = "0.13"
hyper-tls = "0.4.1"
tokio = { version = "0.2", features = ["full"] }
bytes = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sodiumoxide = "0.2.5"
base64 = "0.12.0"
