[package]
name = "gh-auth"
version = "0.1.0"
authors = ["Aslam Ahammed <aslamplr@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0"
hyper = "0.13"
hyper-rustls = { version = "0.20.0", default-features = false, features = [ "webpki-tokio" ] }
futures = "0.3"
rand = "0.7"
url = "2.1"
webbrowser = "0.5.4"

[build-dependencies]
anyhow = "1.0"
quote = "1.0"
