[package]
name = "gh-auth"
version = "0.1.0"
authors = ["Aslam Ahammed <aslamplr@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0"
hyper = "0.13"
reqwest = { version = "0.10", default-features = false, features = ["json", "rustls-tls"]}
futures = "0.3"
rand = "0.7"
url = "2.1"
webbrowser = "0.5.5"

[build-dependencies]
anyhow = "1.0"
quote = "1.0"
