[package]
name = "gh-cli"
version = "0.4.0"
authors = ["Aslam Ahammed <aslamplr@gmail.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"
repository = "https://github.com/aslamplr/gh-cli"

[dependencies]
clap = "3.0.0-beta.1"
regex = "1"
anyhow = "1.0"
tokio = { version = "0.2", features = ["full"] }
crossterm = "0.17"
termimad = "0.8"
lazy_static = "1.4.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
dirs = "2.0"
gh-lib = { path = "../gh-lib" }
gh-auth = { path = "../gh-auth" }
