[package]
name = "gh-cli"
version = "0.4.0"
authors = ["Aslam Ahammed <aslamplr@gmail.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"
repository = "https://github.com/aslamplr/gh-cli"

[features]
# Login using GitHub OAuth features
login = [ "gh-auth" ]
# Use config file
config = [ "login", "serde", "toml", "dirs" ]
# gh-lib features
chrono = ["gh-lib/chrono"]
workflows = ["gh-lib/workflows"]
secrets = ["gh-lib/secrets"]
secrets-save = ["gh-lib/secrets-save", "secrets"]
basic-info = ["gh-lib/basic-info"]
collaborators = ["gh-lib/collaborators"]
gh-lib-all = [ "workflows", "secrets", "secrets-save", "basic-info", "collaborators", "chrono" ]
# All features
all = [ "login", "config", "gh-lib-all" ]
default = [ "all" ]

[dependencies]
clap = "3.0.0-beta.2"
regex = "1"
anyhow = "1.0"
tokio = { version = "0.2", features = ["full"] }
crossterm = "0.18"
termimad = "0.8"
lazy_static = "1.4.0"
gh-lib = { path = "../gh-lib", default-features = false }
# login
gh-auth = { path = "../gh-auth", optional = true }

# config
serde = { version = "1.0", features = ["derive"], optional = true }
toml = { version = "0.5", optional = true }
dirs = { version = "3.0", optional = true }
