[package]
name = "gh-lib"
version = "0.4.0"
authors = ["Aslam Ahammed <aslamplr@gmail.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"
repository = "https://github.com/aslamplr/gh-cli"

[features]
http-api = [ "hyper", "hyper-tls", "bytes" ]
graphql-api = [ "graphql_client", "http-api" ]
workflows = [ "http-api" ]
secrets = [ "http-api" ]
secrets-save = [ "sodiumoxide", "secrets" ]
basic-info = [ "graphql-api" ]
all = [ "workflows", "secrets", "basic-info", "secrets-save", "chrono" ]
default = [ "all" ]

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.12.1"
async-trait = "0.1.35"
url = "2.1"

# http-api
hyper = { version = "0.13", optional = true }
hyper-tls = { version = "0.4.1", optional = true }
bytes = { version = "0.5", optional = true }
# graphql-api
graphql_client = { version = "0.9.0", optional = true }
# chrono
chrono = { version = "0.4", features = ["serde"], optional = true }
# secrets-save
sodiumoxide = { version = "0.2.5", optional = true }

[build-dependencies]
anyhow = "1.0"
curl = "0.4.29"
graphql_client_codegen = "0.9.0"
syn = "1.0"
quote = "1.0"

[dev-dependencies]
tokio = { version = "0.2", features = ["full"] }
mockito = "0.25"
