[package]
name = "gh-lib"
version = "0.4.0"
authors = ["Aslam Ahammed <aslamplr@gmail.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"
repository = "https://github.com/aslamplr/gh-cli"

[features]
http-api = [ "reqwest" ]
graphql-api = [ "graphql_client", "http-api", "macros" ]
workflows = [ "http-api" ]
secrets = [ "http-api" ]
secrets-save = [ "sodiumoxide", "secrets" ]
basic-info = [ "graphql-api" ]
collaborators = [ "http-api" ]
all = [ "workflows", "secrets", "basic-info", "collaborators", "secrets-save", "chrono" ]
default = [ "all" ]

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.13.0"
async-trait = "0.1.41"
url = "2.2"

# http-api
reqwest = { version = "0.10", default-features = false, features = ["json", "rustls-tls"], optional = true }
# graphql-api
graphql_client = { version = "0.9.0", optional = true }
macros = { path = "macros", optional = true }
# chrono
chrono = { version = "0.4", features = ["serde"], optional = true }
# secrets-save
sodiumoxide = { version = "0.2.6", optional = true }

[dev-dependencies]
tokio = { version = "0.2", features = ["full"] }
mockito = "0.27"

[build-dependencies]
anyhow = "1.0"
curl = { version = "0.4.33" }
