[package]
name = "macros"
version = "0.1.0"
authors = ["Aslam Ahammed <aslamplr@gmail.com>"]
edition = "2018"

[lib]
proc-macro = true

[features]
default = [ "curl" ]

[dependencies]
syn = "1.0"
quote = "1.0"
proc-macro2 = "1.0"
anyhow = "1.0"
graphql_client_codegen = "0.9.0"
curl = { version = "0.4.29", optional = true }
